[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-cala"
version = "0.1.0"
description = "LangChain integration for Cala — the verified knowledge graph API for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lance Salavert", email = "lancelot.salavert@gmail.com" }]
keywords = [
    "langchain",
    "cala",
    "knowledge graph",
    "retriever",
    "ai agents",
    "rag",
    "knowledge base",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.2.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "responses>=0.23",   # HTTP mocking
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/lancelot2/langchain-cala"
Documentation = "https://docs.cala.ai"
Repository = "https://github.com/lancelot2/langchain-cala"
"Bug Tracker" = "https://github.com/lancelot2/langchain-cala/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_cala"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
